# stellar-enigma

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  audio.cpp  custom-template.cpp  level-util.h  main-template.cpp  main.cpp  mode.h  stellar-enigma.cpp  stellar-enigma.hpp  stellar.cpp  stellar.h  tutorial.md  util.cpp  util.h
assets/: menu.ui  obj.json  objdata.ui  ui.css  window.ui
doc/: Doxyfile.in  objects.md
include/: stellar-enigma.hpp
include/audio/: audio.h
include/camera/: camera.h
include/cutscene/: cutscene-manager.h  cutscene.h  cutsceneplayer.h  event.h
include/editor/: editor-gtk.h  editor.h  file-io.h
include/interface/: border-drawer.h  icon.h  interface-manager.h  panel-creator.h
include/level/: field.h  level.h  mapnode.h  obj-container.h
include/mapdata/: camera.h  mapdata.h  menu.h  mode.h
include/misc/: direction.h  effect.h  format.h  interface.h  util.h  vect.h
include/mutable/: board.h  camera-trigger.h  cutplay.h  door.h  key.h  loading-zone.h  mutable.h  object.h  player-start.h  player.h  pushable.h  solid.h  spike.h  switch-and.h  switch-area.h  switch-or.h  teleporter.h  toggle-block.h  water.h
include/physics/: physics.h
include/utility/: save.h  texture-cache.h  utility.h
src/: #main.cpp#  audio.cpp  audio.h  board.cpp  board.h  border-drawer.cpp  border-drawer.h  callback.cpp  callback.h  color.cpp  color.h  custom.cpp  cutplay.cpp  cutplay.h  cutscene-manager.cpp  cutscene-manager.h  cutscene.cpp  cutscene.h  cutsceneplayer.cpp  cutsceneplayer.h  direction.cpp  direction.h  door.cpp  door.h  effect.cpp  entity.cpp  entity.h  event.cpp  event.h  field.cpp  field.h  format.cpp  format.h  icon.cpp  icon.h  interface-manager.cpp  interface-manager.h  interface.cpp  interface.h  key.cpp  (+59 more)
src/audio/: audio.cpp
src/camera/: camera.cpp
src/cutscene/: cutscene-manager.cpp  cutscene.cpp  cutsceneplayer.cpp  event.cpp
src/editor/: editor.cpp  file-io.cpp  gtk-main.cpp  main.cpp
src/interface/: border-drawer.cpp  icon.cpp  interface-manager.cpp  panel-creator.cpp
src/level/: field.cpp  level.cpp  mapnode.cpp  obj-container.cpp
src/mapdata/: mapdata.cpp  menu.cpp  message.cpp  mode.cpp
src/misc/: color.cpp  direction.cpp  effect.cpp  format.cpp  interface.cpp  util.cpp  vect.cpp
src/mutable/: board.cpp  camera-trigger.cpp  cutplay.cpp  door.cpp  key.cpp  loading-zone.cpp  mutable.cpp  object.cpp  player-start.cpp  player.cpp  pushable.cpp  solid.cpp  spike.cpp  switch-and.cpp  switch-area.cpp  switch-or.cpp  teleporter.cpp  toggle-block.cpp  water.cpp
src/physics/: physics.cpp
src/prebuild/: main.cpp
src/utility/: save.cpp  switch-handler.cpp  texture-cache.cpp  utility.cpp
